; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_chmap_sel.c_test_speakers.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_chmap_sel.c_test_speakers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_chmap_sel = type { i32* }
%struct.mp_chmap = type { i32, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_chmap_sel*, %struct.mp_chmap*)* @test_speakers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_speakers(%struct.mp_chmap_sel* %0, %struct.mp_chmap* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mp_chmap_sel*, align 8
  %5 = alloca %struct.mp_chmap*, align 8
  %6 = alloca i32, align 4
  store %struct.mp_chmap_sel* %0, %struct.mp_chmap_sel** %4, align 8
  store %struct.mp_chmap* %1, %struct.mp_chmap** %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %29, %2
  %8 = load i32, i32* %6, align 4
  %9 = load %struct.mp_chmap*, %struct.mp_chmap** %5, align 8
  %10 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp slt i32 %8, %11
  br i1 %12, label %13, label %32

13:                                               ; preds = %7
  %14 = load %struct.mp_chmap_sel*, %struct.mp_chmap_sel** %4, align 8
  %15 = getelementptr inbounds %struct.mp_chmap_sel, %struct.mp_chmap_sel* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load %struct.mp_chmap*, %struct.mp_chmap** %5, align 8
  %18 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %17, i32 0, i32 1
  %19 = load i64*, i64** %18, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i64, i64* %19, i64 %21
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds i32, i32* %16, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %33

28:                                               ; preds = %13
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %6, align 4
  br label %7

32:                                               ; preds = %7
  store i32 1, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %27
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
